--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
         <junit-platform-launcher.version>1.7.2</junit-platform-launcher.version>
         <junit-jupiter-engine.version>5.7.2</junit-jupiter-engine.version>
@@ -21,7 +22,21 @@
         <log4j-core.version>2.14.1</log4j-core.version>
 
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>maven.compiler.source</source>
+                    <target>maven.compiler.target</target>
+                    <encoding>UTF-8</encoding>
+                </configuration>
+            </plugin>
+        </plugins>
 
+    </build>
     <dependencies>
 
         <dependency>
