--- a/pom.xml
+++ b/pom.xml
@@ -27,15 +27,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>maven.compiler.source</source>
-                    <target>maven.compiler.target</target>
                     <encoding>UTF-8</encoding>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
         </plugins>
-
     </build>
     <dependencies>
 
