--- a/pom.xml
+++ b/pom.xml
@@ -16,15 +16,19 @@
         <junit-platform-launcher.version>1.7.2</junit-platform-launcher.version>
         <junit-jupiter-engine.version>5.7.2</junit-jupiter-engine.version>
         <junit-vintage-engine.version>5.7.2</junit-vintage-engine.version>
-        <log4j-api.version>2.13.0</log4j-api.version>
+        <log4j.version>1.2.17</log4j.version>
         <selenide.version>5.23.0</selenide.version>
         <cucumber>6.10.4</cucumber>
         <log4j-core.version>2.14.1</log4j-core.version>
         <allure-junit5.version>2.13.6</allure-junit5.version>
         <mysql-connector-java.version>8.0.21</mysql-connector-java.version>
         <jooq.version>3.14.8</jooq.version>
-
         <slf4j-nop.version>1.7.13</slf4j-nop.version>
+        <rest-assured.version>4.3.3</rest-assured.version>
+        <gson.version>2.8.5</gson.version>
+        <jackson-databind.version>2.12.3</jackson-databind.version>
+        <json-schema-validator.version>3.3.0</json-schema-validator.version>
+
     </properties>
     <build>
         <plugins>
@@ -99,10 +103,11 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>${log4j-api.version}</version>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.codeborne</groupId>
@@ -152,6 +157,30 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-nop</artifactId>
             <version>${slf4j-nop.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>${jackson-databind.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>json-schema-validator</artifactId>
+            <version>${json-schema-validator.version}</version>
         </dependency>
 
     </dependencies>
